--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <!-- loading screen -->
-    <div class="loading-screen z-3 bg-black vh-100 w-100 d-none position-fixed top-0 start-0 end-0 bottom-0  justify-content-center align-items-center">
+    <div class="loading-screen   bg-black vh-100 w-100 d-none position-fixed top-0 start-0 end-0 bottom-0  justify-content-center align-items-center">
         <i class="fa fa-spinner fa-spin fa-5x"></i>
     </div>
 
